examples/test/testpolicy8971.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8971
  namespace: namespace374
spec:
  podSelector:
    matchLabels:
      key23: value16
      key40: value42
      key3: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value33
          key33: value32
          key4: value38
      podSelector:
        matchLabels:
          key36: value35
          key32: value36
